test/parallel/forall/blank-intents/array-intent-from-actual-error-forall.good
array-intent-from-actual-error-forall.chpl:4: In function 'explicitConst1':
array-intent-from-actual-error-forall.chpl:5: error: cannot assign to const variable
array-intent-from-actual-error-forall.chpl:6: error: cannot assign to const variable
  array-intent-from-actual-error-forall.chpl:17: called as explicitConst1(A: [domain(1,int(64),one)] int(64))
array-intent-from-actual-error-forall.chpl:22: error: cannot assign to const variable
array-intent-from-actual-error-forall.chpl:23: error: cannot assign to const variable
